Fix username overflow and make menu draggable

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,5 @@
 .header {
+    -webkit-app-region: drag;
     min-height: 44px;
     max-height: 44px;
     border-bottom: 1px solid #000000;
@@ -85,6 +86,12 @@
 
     img {
         display: block;
+    }
+
+    span {
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     &:hover {
